--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   pinput: ^5.0.0
   intl_phone_field: ^3.2.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
