--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   pinput: ^5.0.0
   intl_phone_field: ^3.2.0
   flutter_rating_bar: ^4.0.1
+  shared_preferences: ^2.5.3
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  cloud_firestore: ^6.1.0
 
 dev_dependencies:
   flutter_test:
